--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'citipy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/9f/vpfdl7qs2yl8g965_xjq_j8w0000gn/T/ipykernel_31842/176598511.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;31m# Import citipy to determine the cities based on latitude and longitude\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcitipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcitipy\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'citipy'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import matplotlib.pyplot as plt\n",
@@ -35,6 +23,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of cities in the list: 588\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Empty list for holding the latitude and longitude combinations\n",
+    "lat_lngs = []\n",
+    "\n",
+    "# Empty list for holding the cities names\n",
+    "cities = []\n",
+    "\n",
+    "# Range of latitudes and longitudes\n",
+    "lat_range = (-90, 90)\n",
+    "lng_range = (-180, 180)\n",
+    "\n",
+    "# Create a set of random lat and lng combinations\n",
+    "lats = np.random.uniform(lat_range[0], lat_range[1], size=1500)\n",
+    "lngs = np.random.uniform(lng_range[0], lng_range[1], size=1500)\n",
+    "lat_lngs = zip(lats, lngs)\n",
+    "\n",
+    "# Identify nearest city for each lat, lng combination\n",
+    "for lat_lng in lat_lngs:\n",
+    "    city = citipy.nearest_city(lat_lng[0], lat_lng[1]).city_name\n",
+    "    \n",
+    "    # If the city is unique, then add it to a our cities list\n",
+    "    if city not in cities:\n",
+    "        cities.append(city)\n",
+    "\n",
+    "# Print the city count to confirm sufficient count\n",
+    "print(f\"Number of cities in the list: {len(cities)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -43,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +87,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
