retrieve json files

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -67,7 +67,74 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Set the API base URL\n",
+    "base_url = 'https://api.openweathermap.org/data/2.5/weather?'\n",
+    "\n",
+    "# Define an empty list to fetch the weather data for each city\n",
+    "city_data = []\n",
+    "\n",
+    "# Print to logger\n",
+    "print(\"Beginning Data Retrieval     \")\n",
+    "print(\"-----------------------------\")\n",
+    "\n",
+    "# Create counters\n",
+    "record_count = 1\n",
+    "set_count = 1\n",
+    "\n",
+    "# Loop through all the cities in our list to fetch weather data\n",
+    "for i, city in enumerate(cities):\n",
+    "        \n",
+    "    # Group cities in sets of 50 for logging purposes\n",
+    "    if (i % 50 == 0 and i >= 50):\n",
+    "        set_count += 1\n",
+    "        record_count = 0\n",
+    "\n",
+    "    # Create endpoint URL with each city\n",
+    "    city_url = f\"{base_url}q={city}&appid={weather_api_key}\"\n",
+    "    \n",
+    "    # Log the url, record, and set numbers\n",
+    "    print(\"Processing Record %s of Set %s | %s\" % (record_count, set_count, city))\n",
+    "\n",
+    "    # Add 1 to the record count\n",
+    "    record_count += 1\n",
+    "\n",
+    "    # Run an API request for each of the cities\n",
+    "    try:\n",
+    "        # Parse the JSON and retrieve data\n",
+    "        city_weather = requests.get(city_url).json()\n",
+    "\n",
+    "        # Parse out latitude, longitude, max temp, humidity, cloudiness, wind speed, country, and date\n",
+    "        city_lat = # YOUR CODE HERE\n",
+    "        city_lng = # YOUR CODE HERE\n",
+    "        city_max_temp = # YOUR CODE HERE\n",
+    "        city_humidity = # YOUR CODE HERE\n",
+    "        city_clouds = # YOUR CODE HERE\n",
+    "        city_wind = # YOUR CODE HERE\n",
+    "        city_country = # YOUR CODE HERE\n",
+    "        city_date = # YOUR CODE HERE\n",
+    "\n",
+    "        # Append the City information into city_data list\n",
+    "        city_data.append({\"City\": city, \n",
+    "                          \"Lat\": city_lat, \n",
+    "                          \"Lng\": city_lng, \n",
+    "                          \"Max Temp\": city_max_temp,\n",
+    "                          \"Humidity\": city_humidity,\n",
+    "                          \"Cloudiness\": city_clouds,\n",
+    "                          \"Wind Speed\": city_wind,\n",
+    "                          \"Country\": city_country,\n",
+    "                          \"Date\": city_date})\n",
+    "\n",
+    "    # If an error is experienced, skip the city\n",
+    "    except:\n",
+    "        print(\"City not found. Skipping...\")\n",
+    "        pass\n",
+    "              \n",
+    "# Indicate that Data Loading is complete \n",
+    "print(\"-----------------------------\")\n",
+    "print(\"Data Retrieval Complete      \")\n",
+    "print(\"-----------------------------\")"
+   ]
   }
  ],
  "metadata": {
