--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -45,6 +45,293 @@
     "# Import API key\n",
     "from api_keys import geoapify_key"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>san-pedro</td>\n",
+       "      <td>4.7485</td>\n",
+       "      <td>-6.6363</td>\n",
+       "      <td>27.45</td>\n",
+       "      <td>80</td>\n",
+       "      <td>97</td>\n",
+       "      <td>4.69</td>\n",
+       "      <td>CI</td>\n",
+       "      <td>1682106635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>margaret river</td>\n",
+       "      <td>-33.9500</td>\n",
+       "      <td>115.0667</td>\n",
+       "      <td>13.58</td>\n",
+       "      <td>92</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4.02</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1682106636</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>ar rumaythah</td>\n",
+       "      <td>31.5263</td>\n",
+       "      <td>45.2025</td>\n",
+       "      <td>25.83</td>\n",
+       "      <td>35</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5.41</td>\n",
+       "      <td>IQ</td>\n",
+       "      <td>1682106637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>pandan</td>\n",
+       "      <td>14.0453</td>\n",
+       "      <td>124.1694</td>\n",
+       "      <td>25.65</td>\n",
+       "      <td>85</td>\n",
+       "      <td>94</td>\n",
+       "      <td>2.46</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>1682106637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>mana</td>\n",
+       "      <td>5.6592</td>\n",
+       "      <td>-53.7767</td>\n",
+       "      <td>26.02</td>\n",
+       "      <td>88</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3.69</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>1682106638</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID            City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0        0       san-pedro   4.7485   -6.6363     27.45        80          97   \n",
+       "1        1  margaret river -33.9500  115.0667     13.58        92          11   \n",
+       "2        2    ar rumaythah  31.5263   45.2025     25.83        35          11   \n",
+       "3        3          pandan  14.0453  124.1694     25.65        85          94   \n",
+       "4        4            mana   5.6592  -53.7767     26.02        88         100   \n",
+       "\n",
+       "   Wind Speed Country        Date  \n",
+       "0        4.69      CI  1682106635  \n",
+       "1        4.02      AU  1682106636  \n",
+       "2        5.41      IQ  1682106637  \n",
+       "3        2.46      PH  1682106637  \n",
+       "4        3.69      GF  1682106638  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the CSV file created in Part 1 into a Pandas DataFrame\n",
+    "city_data_df = pd.read_csv(\"output_data/cities.csv\")\n",
+    "\n",
+    "# Display sample data\n",
+    "city_data_df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 1: Create a map that displays a point for every city in the city_data_df DataFrame. The size of the point should be the humidity in each city.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture --no-display\n",
+    "\n",
+    "# Configure the map plot\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Display the map\n",
+    "# YOUR CODE HERE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 2: Narrow down the city_data_df DataFrame to find your ideal weather condition**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Narrow down cities that fit criteria and drop any results with null values\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Drop any rows with null values\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Display sample data\n",
+    "# YOUR CODE HERE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 3: Create a new DataFrame called hotel_df**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the Pandas copy function to create DataFrame called hotel_df to store the city, country, coordinates, and humidity\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Add an empty column, \"Hotel Name,\" to the DataFrame so you can store the hotel found using the Geoapify API\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Display sample data\n",
+    "# YOUR CODE HERE"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 4: For each city, use the Geoapify API to find the first hotel located within 10,000 metres of your coordinates.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set parameters to search for a hotel\n",
+    "radius = # YOUR CODE HERE\n",
+    "params = {\n",
+    "    # YOUR CODE HERE\n",
+    "}\n",
+    "\n",
+    "# Print a message to follow up the hotel search\n",
+    "print(\"Starting hotel search\")\n",
+    "\n",
+    "# Iterate through the hotel_df DataFrame\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    # get latitude, longitude from the DataFrame\n",
+    "    # YOUR CODE HERE\n",
+    "    \n",
+    "    # Add filter and bias parameters with the current city's latitude and longitude to the params dictionary\n",
+    "    params[\"filter\"] = # YOUR CODE HERE\n",
+    "    params[\"bias\"] = # YOUR CODE HERE\n",
+    "    \n",
+    "    # Set base URL\n",
+    "    base_url = \"https://api.geoapify.com/v2/places\"\n",
+    "\n",
+    "\n",
+    "    # Make and API request using the params dictionaty\n",
+    "    name_address = # YOUR CODE HERE\n",
+    "    \n",
+    "    # Convert the API response to JSON format\n",
+    "    name_address = # YOUR CODE HERE\n",
+    "    \n",
+    "    # Grab the first hotel from the results and store the name in the hotel_df DataFrame\n",
+    "    try:\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = name_address[\"features\"][0][\"properties\"][\"name\"]\n",
+    "    except (KeyError, IndexError):\n",
+    "        # If no hotel is found, set the hotel name as \"No hotel found\".\n",
+    "        hotel_df.loc[index, \"Hotel Name\"] = \"No hotel found\"\n",
+    "        \n",
+    "    # Log the search results\n",
+    "    print(f\"{hotel_df.loc[index, 'City']} - nearest hotel: {hotel_df.loc[index, 'Hotel Name']}\")\n",
+    "\n",
+    "# Display sample data\n",
+    "hotel_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Step 5: Add the hotel name and the country as additional information in the hover message for each city in the map.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture --no-display\n",
+    "\n",
+    "# Configure the map plot\n",
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# Display the map\n",
+    "# YOUR CODE HERE"
+   ]
   }
  ],
  "metadata": {
