added linear regression analyses

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1601,7 +1601,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dsicussion about the linear relationship:"
+    "Discussion about the linear relationship: These scatter plots and linear regressions are modeling that as you get closer to the equator (latitude of 0), the maximum temperature increases somewhat drastically. This increase is between 20 and 40 degrees Celcius. Because the scatter plots fit relatively well to the regression lines, the regression gives a more accurate picture of the trend in max temp in relation to latitude. "
    ]
   },
   {
@@ -1645,7 +1645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1680,7 +1680,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussion about the linear relationship: "
+    "Discussion about the linear relationship: These scatter plots and linear regressions look to be modeling that as you increase in latitude from the south pole to the equator, the humidity increases by roughly 0.52 for each increase of one in latitude. As we look from the equator Northward, the data shows that the humidity increases at a slower rate 0.28 for each increase of one in latitude. Ideally, the humidity index at 0 would be the same for both of these graphs but they are roughly 30 points from one another. This could be caused by a discrepency in the longitude of the data for the latitudes of 0 in the Northern and Southern dataframes or the fact that the Northern scatter plot has a very wide range of data points."
    ]
   },
   {
@@ -1759,7 +1759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussion about the linear relationship:"
+    "Discussion about the linear relationship: These scatter plots and linear regressions look to be modeling a wide range of data. Both the Northern and Southern graphs show slight increases in cloudiness as you follow from their lowest latitude to their highest. Because of the wide variability in the scatter plot data, these regression lines are not exceptionally helpful in seeing trends."
    ]
   },
   {
@@ -1838,7 +1838,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Discussion about the linear relationship:"
+    "Discussion about the linear relationship: These scatter plots and linear regressions show a slight increase in predicted wind speed as you go from the south pole to a latitude of 0 and very little change in predicted wind speed as you look from a latitude of 0 northward. "
    ]
   }
  ],
