fixed naming convention for saving figs

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1201,13 +1201,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#test linear regression function from hint\n",
     "\n",
-    "def plot_linearregression(x_values, y_values, y_label, annotation_loc):\n",
+    "def plot_linearregression(x_values, y_values, y_label, annotation_loc, orientation):\n",
     "    # Create a linear regression model and fit it to your x and actual y values\n",
     "    (slope, intercept, rvalue, pvalue, stderr) = linregress(x_values, y_values)\n",
     "    # Calculate the predicted y values using the equation of a line\n",
@@ -1228,7 +1228,7 @@
     "    R_squared = rvalue*rvalue\n",
     "    print(f\"The r-value is: {R_squared}\")\n",
     "\n",
-    "    plt.savefig(f\"output_data/lat_vs_{y_label}_reg.png\")\n",
+    "    plt.savefig(f\"output_data/{orientation}_lat_vs_{y_label}_reg.png\")\n",
     "\n",
     "    plt.show()"
    ]
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1562,12 +1562,12 @@
     "n_lat = northern_hemi_df['Lat']\n",
     "n_max_temp = northern_hemi_df['Max Temp']\n",
     "\n",
-    "plot_linearregression(n_lat, n_max_temp, 'Max Temp', (5, -10))"
+    "plot_linearregression(n_lat, n_max_temp, 'Max Temp', (5, -10), 'north')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1593,7 +1593,7 @@
     "s_lat = southern_hemi_df['Lat']\n",
     "s_max_temp = southern_hemi_df['Max Temp']\n",
     "\n",
-    "plot_linearregression(s_lat, s_max_temp, 'Max Temp', (-55, 30))"
+    "plot_linearregression(s_lat, s_max_temp, 'Max Temp', (-55, 30), 'south')"
    ]
   },
   {
@@ -1614,7 +1614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1640,12 +1640,12 @@
     "n_lat = northern_hemi_df['Lat']\n",
     "n_humid = northern_hemi_df['Humidity']\n",
     "\n",
-    "plot_linearregression(n_lat, n_humid, 'Humidity', (50, 10))"
+    "plot_linearregression(n_lat, n_humid, 'Humidity', (50, 10), 'north')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1672,7 +1672,7 @@
     "s_lat = southern_hemi_df['Lat']\n",
     "s_humid = southern_hemi_df['Humidity']\n",
     "\n",
-    "plot_linearregression(s_lat, s_humid, 'Humidity', (-20, 10))"
+    "plot_linearregression(s_lat, s_humid, 'Humidity', (-20, 10), 'south')"
    ]
   },
   {
@@ -1693,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1719,12 +1719,12 @@
     "n_lat = northern_hemi_df['Lat']\n",
     "n_cloud = northern_hemi_df['Cloudiness']\n",
     "\n",
-    "plot_linearregression(n_lat, n_cloud, 'Cloudiness', (60, 30))"
+    "plot_linearregression(n_lat, n_cloud, 'Cloudiness', (60, 30), 'north')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1751,7 +1751,7 @@
     "s_lat = southern_hemi_df['Lat']\n",
     "s_cloud = southern_hemi_df['Cloudiness']\n",
     "\n",
-    "plot_linearregression(s_lat, s_cloud, 'Cloudiness', (-50, 30))"
+    "plot_linearregression(s_lat, s_cloud, 'Cloudiness', (-50, 30), 'south')"
    ]
   },
   {
@@ -1772,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1798,12 +1798,12 @@
     "n_lat = northern_hemi_df['Lat']\n",
     "n_wind = northern_hemi_df['Wind Speed']\n",
     "\n",
-    "plot_linearregression(n_lat, n_wind, 'Wind Speed', (0, 12))"
+    "plot_linearregression(n_lat, n_wind, 'Wind Speed', (0, 12), 'north')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1830,7 +1830,7 @@
     "s_lat = southern_hemi_df['Lat']\n",
     "s_wind = southern_hemi_df['Wind Speed']\n",
     "\n",
-    "plot_linearregression(s_lat, s_wind, 'Wind Speed', (-30, 12))"
+    "plot_linearregression(s_lat, s_wind, 'Wind Speed', (-30, 12), 'south')"
    ]
   },
   {
