final fix for city df indexes

--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>City_ID</th>\n",
        "      <th>City</th>\n",
        "      <th>Lat</th>\n",
        "      <th>Lng</th>\n",
@@ -84,11 +83,22 @@
        "      <th>Country</th>\n",
        "      <th>Date</th>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>City_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>san-pedro</td>\n",
        "      <td>4.7485</td>\n",
        "      <td>-6.6363</td>\n",
@@ -101,7 +111,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>margaret river</td>\n",
        "      <td>-33.9500</td>\n",
        "      <td>115.0667</td>\n",
@@ -114,7 +123,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>ar rumaythah</td>\n",
        "      <td>31.5263</td>\n",
        "      <td>45.2025</td>\n",
@@ -127,7 +135,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>pandan</td>\n",
        "      <td>14.0453</td>\n",
        "      <td>124.1694</td>\n",
@@ -140,7 +147,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>mana</td>\n",
        "      <td>5.6592</td>\n",
        "      <td>-53.7767</td>\n",
@@ -156,29 +162,31 @@
        "</div>"
       ],
       "text/plain": [
-       "   City_ID            City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0        0       san-pedro   4.7485   -6.6363     27.45        80          97   \n",
-       "1        1  margaret river -33.9500  115.0667     13.58        92          11   \n",
-       "2        2    ar rumaythah  31.5263   45.2025     25.83        35          11   \n",
-       "3        3          pandan  14.0453  124.1694     25.65        85          94   \n",
-       "4        4            mana   5.6592  -53.7767     26.02        88         100   \n",
+       "                   City      Lat       Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "City_ID                                                                      \n",
+       "0             san-pedro   4.7485   -6.6363     27.45        80          97   \n",
+       "1        margaret river -33.9500  115.0667     13.58        92          11   \n",
+       "2          ar rumaythah  31.5263   45.2025     25.83        35          11   \n",
+       "3                pandan  14.0453  124.1694     25.65        85          94   \n",
+       "4                  mana   5.6592  -53.7767     26.02        88         100   \n",
        "\n",
-       "   Wind Speed Country        Date  \n",
-       "0        4.69      CI  1682106635  \n",
-       "1        4.02      AU  1682106636  \n",
-       "2        5.41      IQ  1682106637  \n",
-       "3        2.46      PH  1682106637  \n",
-       "4        3.69      GF  1682106638  "
+       "         Wind Speed Country        Date  \n",
+       "City_ID                                  \n",
+       "0              4.69      CI  1682106635  \n",
+       "1              4.02      AU  1682106636  \n",
+       "2              5.41      IQ  1682106637  \n",
+       "3              2.46      PH  1682106637  \n",
+       "4              3.69      GF  1682106638  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Load the CSV file created in Part 1 into a Pandas DataFrame\n",
-    "city_data_df = pd.read_csv(\"output_data/cities.csv\")\n",
+    "city_data_df = pd.read_csv(\"output_data/cities.csv\", index_col=\"City_ID\")\n",
     "\n",
     "# Display sample data\n",
     "city_data_df.head()"
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +417,7 @@
        "4              2.24      US  1682106670  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +432,6 @@
     "# Drop any rows with null values\n",
     "vacay_cities_df = vacay_cities_df.dropna()\n",
     "vacay_cities_df = vacay_cities_df.reset_index(drop=True)\n",
-    "vacay_cities_df.drop('City_ID', inplace = True, axis = 1)\n",
     "\n",
     "# Rename the index and drop doubled index\n",
     "vacay_cities_df.index.name = 'City ID'\n",
@@ -443,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +551,7 @@
        "4              albany  42.6001  -73.9662        33      US           "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1011,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1127,7 @@
        "4             No hotel found  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
